---- Changes since 1.240 ----
First version of this module, which allows simple Procmail configuration.
---- Changes since 1.260 ----
Added a message to the module's main page to detect system-level mail aliases (in /etc/aliases) that would forward email to the user to a different destination.
---- Changes since 1.280 ----
Added an option to set the date range for which autoreplies are sent.
---- Changes since 1.290 ----
Added a simple page for setting up an email autoresponder.
Display a warning if /etc/procmailrc is setup to always deliver to the inbox, which would prevent user-defined filters from working.
If email classified as spam is delivered to some folder by a global Procmail configuration (either in /etc/procmailrc or a Virtualmin per-domain setting), display this on the list of filters.
Changed the module name to Filter and Forward Mail.