@@ -9,6 +9,7 @@ index_none4=You do not have any mail filters defined yet. All email will be deli
 index_none5=You do not have any mail filters defined yet. All email will be deliverted to your Inbox, except spam which will be sent to the file $1.
 index_add=Add a new email filter.
 index_addauto=Quick automatic reply setup.
+index_addfwd=Quick forwarding setup.
 index_cspam=Email is spam
 index_cheader=Header $1 matches $2
 index_cre=Headers match $1
@@ -93,3 +94,11 @@ auto_header=Automatic email reply options
 auto_enabled=Automatic response enabled?
 auto_reply=Reply message
 auto_period=Minimum interval between replies
+auto_err=Failed to save automatic reply
+
+forward_title=Forward Email
+forward_header=Email forwarding options
+forward_enabled=Email forwarding enabled?
+forward_to=Forward to addresses
+forward_cont=Also deliver normally?
+forward_err=Failed to save email forwarding
